Bug 1682948 - properly hold the CacheEntry's lock when accessing mPinned. r=necko-reviewers,dragana,decoder

Differential Revision: https://phabricator.services.mozilla.com/D100248